# YueExecutor

./: .gitignore  Cargo.toml  README.md  YueEx.sln
Dumper/: auto_dump_offsets.bat  auto_dump_offsets.ps1
Real/: Real.exe_full.c  crypto.rs  environment.rs  init.rs  luau.rs  progress.md  system.rs
Real/exe/: allocator.rs  avx_simd_logic.rs  cng_crypto_injector.rs  collections.rs  crypto_context.rs  crypto_init.rs  ofstream.rs  ollvm_vm.rs  payload_decryptor.rs  payload_executor.rs  string_pool_decryptor.rs  unwind_handlers.rs
YueExUI/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  YueExEngine.cs
crates/cli-injector/: Cargo.toml
crates/cli-injector/src/: main.rs
crates/mock-host/: Cargo.toml
crates/mock-host/src/: test_runner.rs
crates/yueex-abi/: Cargo.toml
crates/yueex-abi/src/: config.rs  ipc_protocol.rs  lib.rs  types.rs
crates/yueex-dll/: Cargo.toml
crates/yueex-dll/src/: bootstrap.rs  cloak.rs  deferred_init.rs  execution.rs  init.rs  ipc_receiver.rs  lib.rs  luau_bridge.rs  net_hook.rs  offset_resolver.rs  scheduler.rs
crates/yueex-engine/: Cargo.toml
crates/yueex-engine/src/: ffi_types.rs  lib.rs
crates/yueex-injector/: Cargo.toml
crates/yueex-injector/src/: cloaking.rs  iat_resolver.rs  lib.rs  manual_map.rs  memory.rs  module_overload.rs  process.rs  relocation.rs  thread_hijack.rs  vtable_activation.rs
crates/yueex-ipc/: Cargo.toml
crates/yueex-ipc/src/: channel.rs  event.rs  lib.rs  shared_mem.rs
crates/yueex-pe/: Cargo.toml
crates/yueex-pe/src/: exports.rs  headers.rs  imports.rs  lib.rs  relocations.rs  sections.rs
crates/yueex-stealth/: Cargo.toml
crates/yueex-stealth/src/: api_hash.rs  indirect_syscall.rs  lib.rs  memory_cloak.rs  stack_spoof.rs  string_crypt.rs  thread_pool.rs
docs/: myapp-development-loader.md  myapp-verifier.md  project-scope.md
frontend/YueEx.Dashboard/: Class1.cs
frontend/YueEx.Dashboard.Gui/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  YueEx.Dashboard.Gui.csproj
