[package]
name = "cli-injector"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13.4", features = ["blocking", "json"] }
yueex-abi = { version = "0.1.0", path = "../yueex-abi" }
yueex-injector = { version = "0.1.0", path = "../yueex-injector" }
tracing = { workspace = true }
tracing-subscriber = "0.3"
tracing-appender = "0.2"
