[package]
name = "yueex-injector"
version = "0.1.0"
edition = "2021"
description = "Manual Mapping injection engine with Module Overloading and Thread Hijacking"

[dependencies]
yueex-abi = { workspace = true }
yueex-pe = { workspace = true }
windows = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
libc = "0.2.186"
yueex-stealth = { path = "../yueex-stealth" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
