[package]
name = "yueex-stealth"
version = "0.1.0"
edition = "2021"
description = "Ultimate usermode stealth: indirect syscalls, stack spoofing, memory cloaking, API hashing"

[dependencies]
windows = { workspace = true, features = [
    "Win32_System_SystemServices",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Kernel",
] }
tracing = { workspace = true }
yueex-pe = { workspace = true }
